# stark-symphony

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: test.yml
docs/: batching_samples.md  channel.md  commitments.md  m31_extensions.md  quotients.md  vanishing_polynomial.md  verifier_flow.md
elementsd-tests/: Cargo.toml
elementsd-tests/src/: keys.rs  main.rs  script.rs  transaction.rs
scripts/: format_proof.py  generate_wit.py  unit_tests.sh
scripts/fibsquare/: __main__.py  channel_test.py  field_tests.py  merkle.py  merkle_test.py  polynomial.py  polynomial_test.py  prover.py  prover_test.py
scripts/stark101/: __main__.py  channel.py  field.py  list_utils.py  merkle.py  polynomial.py  polynomial_test.py  prover.py  prover_test.py
simfony-cli/: Cargo.toml
simfony-cli/src/: main.rs  tracker.rs
simfony-vsix/: .vscodeignore  LICENSE  README.md  package.json
simfony-vsix/snippets/: arithmetic.json  bitcoin_without_primitives.json  digital_signatures.json  elliptic_curve_functions.json  hash_functions.json  issuance.json  multi_bit_logic.json  signature_hash_modes.json  time_locks.json  transaction.json
simfony-wallet/: Cargo.toml  README.md
simfony-wallet/src/: esplora.rs  main.rs  rpc.rs  script.rs  transaction.rs
src/: air.simf  channel.simf  field.simf  field_ops.simf  fri.simf  main.simf  merkle.simf  padding.simf  sha256.simf  simple_fib.simf  tests.simf  verifier.simf
src/airs/: flat_fib.simf
src/circle/: channel.simf  m31_point.simf  qm31_point.simf
src/circle/airs/: flat_fib.simf
src/circle/domain/: qm31_point.simf
src/circle/fields/: cm31.simf  qm31.simf
src/circle/fri/: README.md
src/circle/groups/: README.md  m31_point.simf  qm31_point.simf
src/circle/poly/: README.md  deep_quotient.simf  vanishing.simf
src/fields/: cm31.simf  m31.simf  qm31.simf
src/uni/: air.simf  channel.simf  field.simf  fri.simf  verifier.simf
src/utils/: channel.simf  merkle.simf
stark-vault/: Cargo.toml  README.md
stark-vault/src/: esplora.rs  keys.rs  main.rs  script.rs  transaction.rs
stark101/: Makefile
stark101/scripts/fibsquare/: __init__.py  __main__.py  channel.py  merkle_test.py  prover.py  prover_test.py
stark101/src/: channel.simf  fri.simf  main.simf
stwo-verifier/: Makefile
stwo-verifier/scripts/: convert_proof.py  generate_simf.py  generate_wit.py
stwo-verifier/src/: channel.simf  config.simf  hasher.simf  main.simf  merkle.simf  pow.simf  verifier.simf
stwo-verifier/src/airs/: flat_fib.simf
stwo-verifier/src/channel/: helpers.simf  state.simf
stwo-verifier/src/constraints/: flat_fib.simf  helpers.simf  wide_fibonacci.simf
stwo-verifier/src/deep/: oods.simf  quotients.simf
stwo-verifier/src/evals/: commit.simf  composition_poly.simf  decommit.simf  trace_poly.simf  verify.simf
stwo-verifier/src/fields/: cm31.simf  m31.simf  qm31.simf
stwo-verifier/src/fri/: answers.simf  batching.simf  commit.simf  decommit.simf  folding.simf  layers.simf  queries.simf  verify.simf
stwo-verifier/src/groups/: canonic_coset.simf  circle_domain.simf  coset.simf  line_domain.simf  m31_point.simf  positions.simf  qm31_point.simf
stwo-verifier/src/macros/: array_fold.simf  array_get.simf  array_map.simf  array_zip.simf  list_get.simf  list_map.simf  list_zip.simf
stwo-verifier/src/poly/: deep_quotient.simf  (+3 more)
tests/: Cargo.toml
tests/src/: lib.rs
(+13 files in other folders)
