[workspace]
members = ["simfony-cli", "simfony-wallet"]
resolver = "2"

[workspace.dependencies]
simfony = { git = "https://github.com/m-kus/simfony", rev = "686e07b32663efdb109d29adf91eccdac807a868", features = ["serde"] }
simplicity-lang = { git = "https://github.com/BlockstreamResearch/rust-simplicity", rev = "5c3ff26cd6311c438b13513c2af81f4d88de4901", features = ["test-utils"] }
