[workspace]
members = ["simfony-cli", "simfony-wallet"]
resolver = "2"

[workspace.dependencies]
simfony = { git = "https://github.com/m-kus/simfony", rev = "74b94b4414d6d29ad254026168b4ee2c50cbde40", features = ["serde"] }
simplicity-lang = { git = "https://github.com/m-kus/rust-simplicity", rev = "7c43d07c12a47906fb1de6af35f8d0f2c2f93127", features = ["test-utils", "debug"] }
