[package]
name = "simfony-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simfony"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
simfony = { git = "https://github.com/m-kus/simfony", rev = "37476a6141d64cc0da4ae683212b521e2b505e29" }
