[package]
name = "simfony-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simfony"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
simfony = { git = "https://github.com/m-kus/simfony", rev = "a79cc9ef816b2f1bf8c905a964ccbc53a5f01305", features = ["serde"] }
serde_json = "1.0"
