[package]
name = "simfony-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simfony"
path = "src/main.rs"

[dependencies]
itertools = "0.11"
simfony.workspace = true
simplicity-lang.workspace = true
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
serde_json = "1.0"
hex = "0.4"