[package]
name = "simfony-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simfony-wallet"

[dependencies]
simfony.workspace = true
elements = { version = "0.25", features = ["serde"] }
actual-rand = { package = "rand", version = "0.8.4" }
secp256k1 = { version = "0.29.0", features = ["rand-std"] }
clap = { version = "4.4.11", features = ["derive"] }
hex = "0.4.3"
bip39 = "2.0.0"
dotenv = "0.15.0"
anyhow = "1.0.75"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
